--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -76,16 +76,8 @@
     width: 260px;
     margin-left: 52px;
 
-    & .text-field {
+    &-text {
       margin-top: 23px;
-    }
-
-    & .text-field__arrow {
-      top: 11px;
-      right: 10px;
-    }
-
-    & .text-field__input--small {
       width: 260px;
     }
   }
@@ -149,11 +141,11 @@
     padding: 187px 104px 100px;
     background-color: #fff;
 
-    & .footer__social-buttons {
+    &-social-buttons {
       margin-top: 21px;
     }
 
-    & img {
+    &-logo {
       transform: translateY(-15px);
     }
   }
