--- a/src/components/radio-button/radio-button.scss
+++ b/src/components/radio-button/radio-button.scss
@@ -1,7 +1,7 @@
 @use 'src/styles/global';
 
 .radio-button {
-  margin-bottom: 3px;
+  margin: 0 20px 3px 0;
   display: flex;
   align-items: center;
 
