--- a/src/components/text-field/text-field copy.pug
+++ b/src/components/text-field/text-field copy.pug
@@ -1,12 +1,12 @@
 mixin text-field(props)
   - const { id = "uniqIdTextField", title = "Default", description = "", placeholder = "", value = "", styles = "", classNames = "", arrow = false, small = false, readonly = false, mask = false, dropdown = false, open = false } = props;
-  .text-field
-    .text-field__top
+  .text-field(class=small ? "text-field__small" : "")
+    .text-field__top(class=small ? "text-field__top--small" : "") 
       span.text-field__title= title
       span.text-field__description= description
     .text-field__input-wrapper(class=classNames, data-dropdown=dropdown ? id : false)
       input.text-field__input(
-        class=open ? "dropdown__field--active" : "",
+        class=small ? `text-field__input--small ${open ? "dropdown__field--active" : ""}` : `${open ? "dropdown__field--active" : ""}`,
         placeholder=placeholder,
         value=value,
         readonly=readonly,
@@ -15,8 +15,6 @@ mixin text-field(props)
         id=uniqId
       )
       if dropdown === true
-        .material-icons.md-24.dropdown__arrow &#xe5cf;
+        .material-icons.md-24.dropdown__arrow(class=small ? "dropdown__arrow--small" : "") &#xe5cf;
     if arrow === true
-      span.material-icons.md-24(
-        class=title === "" ? `text-field__arrow text-field__arrow--small` : "text-field__arrow"
-      ) &#xe5c8;
+      span.material-icons.md-24.text-field__arrow(class=small ? "text-field__arrow--small" : "") &#xe5c8;
