--- a/src/components/text-field/text-field copy.scss
+++ b/src/components/text-field/text-field copy.scss
@@ -33,8 +33,7 @@
   }
 
   &__input {
-    // width: 320px;
-    width: 100%;
+    width: 320px;
     height: 44px;
     border: 1px solid global.$dark25;
     border-radius: 4px;
@@ -73,7 +72,6 @@
     color: global.$purple;
 
     &--small {
-      top: 11px;
       right: 10px;
     }
   }
