--- a/src/layouts/UI/UI.scss
+++ b/src/layouts/UI/UI.scss
@@ -1,9 +1,13 @@
-.UI-layout__wrapper {
-  background: #fff;
-  margin: 0 auto;
-  width: 1440px;
-}
-
-.UI-layout__logo {
-  margin: 30px 0 0 30px;
+.UI-layout {
+  &__wrapper {
+    background: #fff;
+    margin: 0 auto;
+    width: 1440px;
+  }
+  &__logo {
+    margin: 30px 0 0 30px;
+    &--cards {
+      background: #f4f4f6;
+    }
+  }
 }
