--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -7,425 +7,470 @@
   box-sizing: initial;
   display: flex;
   flex-direction: column;
-}
-
-.paginationjs::after {
-  display: table;
-  content: ' ';
-  clear: both;
-}
-
-.paginationjs .paginationjs-pages {
-  float: left;
-}
-
-.paginationjs .paginationjs-pages ul {
-  float: left;
-  margin: 0;
-  padding: 0;
-}
-
-.paginationjs .paginationjs-go-button,
-.paginationjs .paginationjs-go-input,
-.paginationjs .paginationjs-nav {
-  float: left;
-  margin-left: 10px;
-  font-size: 14px;
-}
-
-.paginationjs .paginationjs-pages li {
-  float: left;
-  border-right: none;
-  list-style: none;
-  width: 40px;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.paginationjs .paginationjs-pages li > a {
-  min-width: 40px;
-  height: 40px;
-  line-height: 40px;
-  display: block;
-  background: #fff;
-  font-size: 12px;
-  font-weight: 400;
-  color: global.$dark50;
-  text-decoration: none;
-  text-align: center;
-}
-
-.paginationjs .paginationjs-pages li > a:hover {
-  background: #eee;
-}
-
-.paginationjs .paginationjs-pages li.active {
-  border: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.paginationjs .paginationjs-pages li.active > a {
-  display: inline-block;
-  height: 40px;
-  line-height: 40px;
-  background: #aaa;
-  color: #fff;
-  border-radius: 50%;
-}
-
-.paginationjs .paginationjs-pages li.disabled > a {
-  opacity: 0.3;
-}
-
-.paginationjs .paginationjs-pages li.disabled > a:hover {
-  background: 0 0;
-}
-
-.paginationjs .paginationjs-pages li:last-child {
-  border-radius: 0 3px 3px 0;
-}
-
-.paginationjs .paginationjs-pages li:last-child > a {
-  border-radius: 0 3px 3px 0;
-}
-
-.paginationjs .paginationjs-go-input > input[type='text'] {
-  width: 30px;
-  height: 28px;
-  background: #fff;
-  border-radius: 3px;
-  border: 1px solid #aaa;
-  padding: 0;
-  font-size: 14px;
-  text-align: center;
-  vertical-align: baseline;
-  outline: 0;
-  box-shadow: none;
-  box-sizing: initial;
-}
-
-.paginationjs .paginationjs-go-button > input[type='button'] {
-  min-width: 40px;
-  height: 30px;
-  line-height: 28px;
-  background: #fff;
-  border-radius: 3px;
-  border: 1px solid #aaa;
-  text-align: center;
-  padding: 0 8px;
-  font-size: 14px;
-  vertical-align: baseline;
-  outline: 0;
-  box-shadow: none;
-  color: #333;
-  cursor: pointer;
-  vertical-align: middle\9;
-}
-
-.paginationjs.paginationjs-theme-blue .paginationjs-go-input > input[type='text'],
-.paginationjs.paginationjs-theme-blue .paginationjs-pages li {
-  border-color: #289de9;
-}
-
-.paginationjs .paginationjs-pages li.active > a {
-  background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%) !important;
-}
-
-.paginationjs .paginationjs-go-button > input[type='button']:hover {
-  background-color: #f8f8f8;
-}
-
-.paginationjs .paginationjs-nav {
-  height: 30px;
-  line-height: 30px;
-  margin: 4px 0 0 6px;
-  color: global.$dark75;
-}
-
-.paginationjs .paginationjs-go-button,
-.paginationjs .paginationjs-go-input {
-  margin-left: 5px\9;
-}
-
-.paginationjs.paginationjs-small {
-  font-size: 12px;
-}
-
-.paginationjs.paginationjs-small .paginationjs-pages li > a {
-  min-width: 26px;
-  height: 24px;
-  line-height: 24px;
-  font-size: 12px;
-}
-
-.paginationjs.paginationjs-small .paginationjs-pages li.active > a {
-  height: 26px;
-  line-height: 26px;
-}
-
-.paginationjs.paginationjs-small .paginationjs-go-input {
-  font-size: 12px;
-}
-
-.paginationjs.paginationjs-small .paginationjs-go-input > input[type='text'] {
-  width: 26px;
-  height: 24px;
-  font-size: 12px;
-}
-
-.paginationjs.paginationjs-small .paginationjs-go-button {
-  font-size: 12px;
-}
-
-.paginationjs.paginationjs-small .paginationjs-go-button > input[type='button'] {
-  min-width: 30px;
-  height: 26px;
-  line-height: 24px;
-  padding: 0 6px;
-  font-size: 12px;
-}
-
-.paginationjs.paginationjs-small .paginationjs-nav {
-  height: 26px;
-  line-height: 26px;
-  font-size: 12px;
-}
-
-.paginationjs.paginationjs-big {
-  font-size: 16px;
-}
-
-.paginationjs.paginationjs-big .paginationjs-pages li > a {
-  min-width: 36px;
-  height: 34px;
-  line-height: 34px;
-  font-size: 16px;
-}
-
-.paginationjs.paginationjs-big .paginationjs-pages li.active > a {
-  height: 36px;
-  line-height: 36px;
-}
-
-.paginationjs.paginationjs-big .paginationjs-go-input {
-  font-size: 16px;
-}
-
-.paginationjs.paginationjs-big .paginationjs-go-input > input[type='text'] {
-  width: 36px;
-  height: 34px;
-  font-size: 16px;
-}
-
-.paginationjs.paginationjs-big .paginationjs-go-button {
-  font-size: 16px;
-}
-
-.paginationjs.paginationjs-big .paginationjs-go-button > input[type='button'] {
-  min-width: 50px;
-  height: 36px;
-  line-height: 34px;
-  padding: 0 12px;
-  font-size: 16px;
-}
-
-.paginationjs.paginationjs-big .paginationjs-nav {
-  height: 36px;
-  line-height: 36px;
-  font-size: 16px;
-}
-
-.paginationjs.paginationjs-theme-blue .paginationjs-pages li > a {
-  color: global.$dark50;
-}
-
-.paginationjs.paginationjs-theme-blue .paginationjs-pages li.active > a {
-  background: #289de9;
-  color: #fff;
-}
-
-.paginationjs.paginationjs-theme-blue .paginationjs-pages li.disabled > a:hover {
-  background: 0 0;
-}
-
-.paginationjs.paginationjs-theme-blue .paginationjs-go-button > input[type='button'] {
-  background: #289de9;
-  border-color: #289de9;
-  color: #fff;
-}
-
-.paginationjs.paginationjs-theme-green .paginationjs-go-input > input[type='text'],
-.paginationjs.paginationjs-theme-green .paginationjs-pages li {
-  border-color: #449d44;
-}
-
-.paginationjs.paginationjs-theme-blue .paginationjs-go-button > input[type='button']:hover {
-  background-color: #3ca5ea;
-}
-
-.paginationjs.paginationjs-theme-green .paginationjs-pages li > a {
-  color: #449d44;
-}
-
-.paginationjs.paginationjs-theme-green .paginationjs-pages li > a:hover {
-  background: #ebf4eb;
-}
-
-.paginationjs.paginationjs-theme-green .paginationjs-pages li.active > a {
-  background: #449d44;
-  color: #fff;
-}
-
-.paginationjs.paginationjs-theme-green .paginationjs-pages li.disabled > a:hover {
-  background: 0 0;
-}
-
-.paginationjs.paginationjs-theme-green .paginationjs-go-button > input[type='button'] {
-  background: #449d44;
-  border-color: #449d44;
-  color: #fff;
-}
-
-.paginationjs.paginationjs-theme-yellow .paginationjs-go-input > input[type='text'],
-.paginationjs.paginationjs-theme-yellow .paginationjs-pages li {
-  border-color: #ec971f;
-}
-
-.paginationjs.paginationjs-theme-green .paginationjs-go-button > input[type='button']:hover {
-  background-color: #55a555;
-}
-
-.paginationjs.paginationjs-theme-yellow .paginationjs-pages li > a {
-  color: #ec971f;
-}
-
-.paginationjs.paginationjs-theme-yellow .paginationjs-pages li > a:hover {
-  background: #fdf5e9;
-}
-
-.paginationjs.paginationjs-theme-yellow .paginationjs-pages li.active > a {
-  background: #ec971f;
-  color: #fff;
-}
-
-.paginationjs.paginationjs-theme-yellow .paginationjs-pages li.disabled > a:hover {
-  background: 0 0;
-}
-
-.paginationjs.paginationjs-theme-yellow .paginationjs-go-button > input[type='button'] {
-  background: #ec971f;
-  border-color: #ec971f;
-  color: #fff;
-}
-
-.paginationjs.paginationjs-theme-red .paginationjs-go-input > input[type='text'],
-.paginationjs.paginationjs-theme-red .paginationjs-pages li {
-  border-color: #c9302c;
-}
-
-.paginationjs.paginationjs-theme-yellow .paginationjs-go-button > input[type='button']:hover {
-  background-color: #eea135;
-}
-
-.paginationjs.paginationjs-theme-red .paginationjs-pages li > a {
-  color: #c9302c;
-}
-
-.paginationjs.paginationjs-theme-red .paginationjs-pages li > a:hover {
-  background: #faeaea;
-}
-
-.paginationjs.paginationjs-theme-red .paginationjs-pages li.active > a {
-  background: #c9302c;
-  color: #fff;
-}
-
-.paginationjs.paginationjs-theme-red .paginationjs-pages li.disabled > a:hover {
-  background: 0 0;
-}
-
-.paginationjs.paginationjs-theme-red .paginationjs-go-button > input[type='button'] {
-  background: #c9302c;
-  border-color: #c9302c;
-  color: #fff;
-}
-
-.paginationjs.paginationjs-theme-red .paginationjs-go-button > input[type='button']:hover {
-  background-color: #ce4541;
-}
-
-.paginationjs .paginationjs-pages li.paginationjs-next > a,
-.paginationjs .paginationjs-pages li.paginationjs-prev > a {
-  background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%) !important;
-  border-radius: 50%;
-  color: #fff;
-}
-
-.paginationjs-prev,
-.paginationjs-next {
-  position: relative;
-}
-
-.paginationjs-prev::before {
-  content: '';
-  position: absolute;
-  height: 2px;
-  width: 14px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #fff;
-}
-
-.paginationjs-prev::after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 45%;
-  transform: translate(-50%, -50%) rotate(-45deg);
-  border: solid #fff;
-  border-width: 2px 0 0 2px;
-  padding: 4px;
-}
-
-.paginationjs-next::before {
-  content: '';
-  position: absolute;
-  height: 2px;
-  width: 14px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #fff;
-}
-
-.paginationjs-next::after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 55%;
-  transform: translate(-50%, -50%) rotate(135deg);
-  border: solid #fff;
-  border-width: 2px 0 0 2px;
-  padding: 4px;
-}
-
-.paginationjs .paginationjs-go-input > input[type='text'] {
-  line-height: 28px\9;
-  vertical-align: middle\9;
-}
-
-.paginationjs.paginationjs-big .paginationjs-pages li > a {
-  line-height: 36px\9;
-}
-
-.paginationjs.paginationjs-big .paginationjs-go-input > input[type='text'] {
-  height: 36px\9;
-  line-height: 36px\9;
+
+  &::after {
+    display: table;
+    content: ' ';
+    clear: both;
+  }
+
+  &-pages {
+    float: left;
+    & ul {
+      float: left;
+      margin: 0;
+      padding: 0;
+    }
+
+    & li {
+      float: left;
+      border-right: none;
+      list-style: none;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    & li > a {
+      min-width: 40px;
+      height: 40px;
+      line-height: 40px;
+      display: block;
+      background: #fff;
+      font-size: 12px;
+      font-weight: 400;
+      color: global.$dark50;
+      text-decoration: none;
+      text-align: center;
+    }
+
+    & li > a:hover {
+      background: #eee;
+    }
+
+    & li.active {
+      border: none;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    & li.active > a {
+      display: inline-block;
+      height: 40px;
+      line-height: 40px;
+      background: #aaa;
+      color: #fff;
+      border-radius: 50%;
+      background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%) !important;
+    }
+
+    & li.disabled > a {
+      opacity: 0.3;
+    }
+
+    & li.disabled > a:hover {
+      background: 0 0;
+    }
+
+    & li:last-child {
+      border-radius: 0 3px 3px 0;
+    }
+
+    & li:last-child > a {
+      border-radius: 0 3px 3px 0;
+    }
+
+    & li.paginationjs-next > a {
+      background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%) !important;
+      border-radius: 50%;
+      color: #fff;
+    }
+
+    & li.paginationjs-prev > a {
+      background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%) !important;
+      border-radius: 50%;
+      color: #fff;
+    }
+  }
+
+  &-go-input {
+    & > input[type='text'] {
+      width: 30px;
+      height: 28px;
+      background: #fff;
+      border-radius: 3px;
+      border: 1px solid #aaa;
+      padding: 0;
+      font-size: 14px;
+      text-align: center;
+      vertical-align: baseline;
+      outline: 0;
+      box-shadow: none;
+      box-sizing: initial;
+
+      line-height: 28px\9;
+      vertical-align: middle\9;
+    }
+
+    & > input[type='button'] {
+      min-width: 40px;
+      height: 30px;
+      line-height: 28px;
+      background: #fff;
+      border-radius: 3px;
+      border: 1px solid #aaa;
+      text-align: center;
+      padding: 0 8px;
+      font-size: 14px;
+      vertical-align: baseline;
+      outline: 0;
+      box-shadow: none;
+      color: #333;
+      cursor: pointer;
+      vertical-align: middle\9;
+    }
+  }
+
+  &-go-button {
+    & > input[type='button']:hover {
+      background-color: red;
+    }
+  }
+
+  &-nav {
+    height: 30px;
+    line-height: 30px;
+    margin: 4px 0 0 6px;
+    color: global.$dark75;
+  }
+
+  &-go-button,
+  &-go-input,
+  &-nav {
+    float: left;
+    margin-left: 10px;
+    font-size: 14px;
+    // margin-left: 5px\9;
+  }
+
+  &-small {
+    font-size: 12px;
+
+    & li > a {
+      min-width: 26px;
+      height: 24px;
+      line-height: 24px;
+      font-size: 12px;
+    }
+
+    & .paginationjs-pages {
+      & li.active > a {
+        height: 26px;
+        line-height: 26px;
+      }
+    }
+
+    & .paginationjs-go-input {
+      font-size: 12px;
+
+      & > input[type='text'] {
+        width: 26px;
+        height: 24px;
+        font-size: 12px;
+      }
+    }
+
+    & .paginationjs-go-button {
+      font-size: 12px;
+
+      & > input[type='button'] {
+        min-width: 30px;
+        height: 26px;
+        line-height: 24px;
+        padding: 0 6px;
+        font-size: 12px;
+      }
+    }
+
+    & .paginationjs-nav {
+      height: 26px;
+      line-height: 26px;
+      font-size: 12px;
+    }
+  }
+
+  &-big {
+    font-size: 16px;
+
+    & li > a {
+      min-width: 36px;
+      height: 34px;
+      line-height: 34px;
+      font-size: 16px;
+    }
+
+    & li.active > a {
+      height: 36px;
+      line-height: 36px;
+    }
+
+    & .paginationjs-go-input {
+      font-size: 16px;
+
+      & > input[type='text'] {
+        width: 36px;
+        height: 34px;
+        font-size: 16px;
+        height: 36px\9;
+        line-height: 36px\9;
+      }
+    }
+
+    & .paginationjs-go-button {
+      font-size: 16px;
+
+      & > input[type='button'] {
+        min-width: 50px;
+        height: 36px;
+        line-height: 34px;
+        padding: 0 12px;
+        font-size: 16px;
+      }
+    }
+
+    & .paginationjs-nav {
+      height: 36px;
+      line-height: 36px;
+      font-size: 16px;
+    }
+
+    & .paginationjs-pages {
+      & li > a {
+        line-height: 36px\9;
+      }
+    }
+  }
+
+  &-next {
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      height: 2px;
+      width: 14px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #fff;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 55%;
+      transform: translate(-50%, -50%) rotate(135deg);
+      border: solid #fff;
+      border-width: 2px 0 0 2px;
+      padding: 4px;
+    }
+  }
+
+  &-prev {
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      height: 2px;
+      width: 14px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #fff;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 45%;
+      transform: translate(-50%, -50%) rotate(-45deg);
+      border: solid #fff;
+      border-width: 2px 0 0 2px;
+      padding: 4px;
+    }
+  }
+
+  &-theme-blue {
+    & .paginationjs-go-input {
+      & > input[type='text'] {
+        border-color: #289de9;
+      }
+    }
+
+    & .paginationjs-pages {
+      & li {
+        border-color: #289de9;
+      }
+
+      & li > a {
+        color: global.$dark50;
+      }
+
+      & li.active > a {
+        background: #289de9;
+        color: #fff;
+      }
+
+      & li.disabled > a:hover {
+        background: 0 0;
+      }
+    }
+
+    & .paginationjs-go-button {
+      & > input[type='button'] {
+        background: #289de9;
+        border-color: #289de9;
+        color: #fff;
+      }
+
+      & > input[type='button']:hover {
+        background-color: #3ca5ea;
+      }
+    }
+  }
+
+  &-theme-green {
+    & .paginationjs-go-input {
+      & > input[type='text'] {
+        border-color: #449d44;
+      }
+    }
+
+    & .paginationjs-pages {
+      & li {
+        border-color: #449d44;
+      }
+
+      & li > a {
+        color: #449d44;
+      }
+
+      & li > a:hover {
+        background: #ebf4eb;
+      }
+
+      & li.active > a {
+        background: #449d44;
+        color: #fff;
+      }
+
+      & li.disabled > a:hover {
+        background: 0 0;
+      }
+    }
+
+    & .paginationjs-go-button {
+      & > input[type='button'] {
+        background: #449d44;
+        border-color: #449d44;
+        color: #fff;
+      }
+      & > input[type='button']:hover {
+        background-color: #55a555;
+      }
+    }
+  }
+
+  &-theme-yellow {
+    & .paginationjs-go-input {
+      & > input[type='text'] {
+        border-color: #ec971f;
+      }
+    }
+
+    & .paginationjs-pages {
+      & li {
+        border-color: #ec971f;
+      }
+      & li > a {
+        color: #ec971f;
+      }
+
+      & li > a:hover {
+        background: #fdf5e9;
+      }
+
+      & li.active > a {
+        background: #ec971f;
+        color: #fff;
+      }
+
+      & li.disabled > a:hover {
+        background: 0 0;
+      }
+    }
+
+    & .paginationjs-go-button {
+      & > input[type='button'] {
+        background: #ec971f;
+        border-color: #ec971f;
+        color: #fff;
+      }
+
+      & > input[type='button']:hover {
+        background-color: #eea135;
+      }
+    }
+  }
+
+  &-theme-red {
+    & .paginationjs-go-input {
+      & > input[type='text'] {
+        border-color: #c9302c;
+      }
+    }
+
+    & .paginationjs-pages {
+      & li {
+        border-color: #c9302c;
+      }
+
+      & li > a {
+        color: #c9302c;
+      }
+
+      & li > a:hover {
+        background: #faeaea;
+      }
+
+      & li.active > a {
+        background: #c9302c;
+        color: #fff;
+      }
+
+      & li.disabled > a:hover {
+        background: 0 0;
+      }
+    }
+
+    & .paginationjs-go-button {
+      & > input[type='button'] {
+        background: #c9302c;
+        border-color: #c9302c;
+        color: #fff;
+      }
+
+      & > input[type='button']:hover {
+        background-color: #ce4541;
+      }
+    }
+  }
 }
 
 ul,
@@ -440,16 +485,16 @@ li {
 
 .data-container {
   margin-top: 20px;
-}
 
-.data-container ul {
-  padding: 0;
-  margin: 0;
-}
+  & ul {
+    padding: 0;
+    margin: 0;
+  }
 
-.data-container li {
-  margin-bottom: 5px;
-  padding: 5px 10px;
-  background: #eee;
-  color: #666;
+  & li {
+    margin-bottom: 5px;
+    padding: 5px 10px;
+    background: #eee;
+    color: #666;
+  }
 }
