--- a/src/components/room/room.scss
+++ b/src/components/room/room.scss
@@ -12,45 +12,6 @@
     height: 151px;
   }
 
-  & .swiper {
-    width: 270px;
-    height: 154px;
-    overflow: hidden;
-
-    & .swiper-horizontal > .swiper-pagination-bullets,
-    .swiper-pagination-bullets.swiper-pagination-horizontal,
-    .swiper-pagination-custom,
-    .swiper-pagination-fraction {
-      left: 99px;
-    }
-
-    & .swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
-    .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
-      margin: 0 4px;
-      margin: 0 var(--swiper-pagination-bullet-horizontal-gap, 2px);
-    }
-
-    &-pagination {
-      top: 118px;
-    }
-
-    &-pagination-bullet {
-      width: 7px;
-      width: var(--swiper-pagination-bullet-width, var(--swiper-pagination-bullet-size, 7px));
-      height: 7px;
-      height: var(--swiper-pagination-bullet-height, var(--swiper-pagination-bullet-size, 7px));
-      border: 1px solid #fff;
-      background: none;
-
-      &-active {
-        background: #fff;
-      }
-    }
-
-    &-slide {
-    }
-  }
-
   &__bot {
     padding: 19px 20px;
   }
@@ -85,100 +46,172 @@
   }
 }
 
-.swiper-button-next,
-.swiper-button-prev {
-  position: absolute;
-  top: 50%;
-  width: 42px;
-  height: 98%;
-  margin-top: calc(0px - (var(--swiper-navigation-size) / 2));
-  z-index: 10;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: var(--swiper-navigation-color, var(--swiper-theme-color));
-  opacity: 0;
-}
+.swiper {
+  width: 270px;
+  height: 154px;
+  overflow: hidden;
+  &:hover {
+    & .swiper-button-next,
+    & .swiper-button-prev {
+      opacity: 1;
+      background: linear-gradient(
+        90deg,
+        rgb(0 0 0 / 50%) 0%,
+        rgb(0 0 0 / 0%) 99.99%,
+        rgb(255 255 255 / 0%) 100%
+      );
+      color: #fff;
+    }
+  }
 
-.swiper:hover .swiper-button-next,
-.swiper:hover .swiper-button-prev {
-  opacity: 1;
-  background: linear-gradient(
-    90deg,
-    rgb(0 0 0 / 50%) 0%,
-    rgb(0 0 0 / 0%) 99.99%,
-    rgb(255 255 255 / 0%) 100%
-  );
-  color: #fff;
-}
+  & .swiper-horizontal > .swiper-pagination-bullets,
+  .swiper-pagination-bullets.swiper-pagination-horizontal,
+  .swiper-pagination-custom,
+  .swiper-pagination-fraction {
+    left: 99px;
+  }
 
-.swiper-button-next.swiper-button-disabled,
-.swiper-button-prev.swiper-button-disabled {
-  opacity: 0;
-  cursor: auto;
-  pointer-events: none;
-}
+  & .swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
+  .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+    margin: 0 4px;
+    margin: 0 var(--swiper-pagination-bullet-horizontal-gap, 2px);
+  }
 
-.swiper-button-next.swiper-button-disabled::after,
-.swiper-button-prev.swiper-button-disabled::after {
-  opacity: 0.5;
-}
+  &-pagination {
+    top: 118px;
+  }
 
-.swiper-button-next.swiper-button-hidden,
-.swiper-button-prev.swiper-button-hidden {
-  opacity: 0;
-  cursor: auto;
-  pointer-events: none;
-}
+  &-pagination-bullet {
+    width: 7px;
+    width: var(--swiper-pagination-bullet-width, var(--swiper-pagination-bullet-size, 7px));
+    height: 7px;
+    height: var(--swiper-pagination-bullet-height, var(--swiper-pagination-bullet-size, 7px));
+    border: 1px solid #fff;
+    background: none;
 
-.swiper-navigation-disabled .swiper-button-next,
-.swiper-navigation-disabled .swiper-button-prev {
-  display: none !important;
-}
+    &-active {
+      background: #fff;
+    }
+  }
 
-.swiper-button-next::after,
-.swiper-button-prev::after {
-  font-family: swiper-icons;
-  font-size: var(--swiper-navigation-size);
-  text-transform: none !important;
-  letter-spacing: 0;
-  font-variant: initial;
-  line-height: 1;
-}
+  &-button-next {
+    position: absolute;
+    top: 50%;
+    width: 42px;
+    height: 98%;
+    margin-top: calc(0px - (var(--swiper-navigation-size) / 2));
+    z-index: 10;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--swiper-navigation-color, var(--swiper-theme-color));
+    opacity: 0;
+    right: 0;
+    top: 0;
+    left: auto;
+    transform: matrix(-1, 0, 0, 1, 0, 0);
 
-.swiper-button-prev,
-.swiper-rtl .swiper-button-next {
-  left: 0;
-  top: 0;
-  right: auto;
-}
+    &::after {
+      font-family: swiper-icons;
+      font-size: var(--swiper-navigation-size);
+      text-transform: none !important;
+      letter-spacing: 0;
+      font-variant: initial;
+      line-height: 1;
+      content: 'next';
+      transform: rotate(180deg);
+    }
 
-.swiper-button-prev::after,
-.swiper-rtl .swiper-button-next::after {
-  content: 'prev';
-}
+    &.swiper-button-disabled {
+      opacity: 0;
+      cursor: auto;
+      pointer-events: none;
+      &::after {
+        opacity: 0.5;
+      }
+    }
+    &.swiper-button-hidden {
+      opacity: 0;
+      cursor: auto;
+      pointer-events: none;
+    }
+  }
 
-.swiper-button-next,
-.swiper-rtl .swiper-button-prev {
-  right: 0;
-  top: 0;
-  left: auto;
-}
+  &-button-prev {
+    position: absolute;
+    top: 50%;
+    width: 42px;
+    height: 98%;
+    margin-top: calc(0px - (var(--swiper-navigation-size) / 2));
+    z-index: 10;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--swiper-navigation-color, var(--swiper-theme-color));
+    opacity: 0;
+    left: 0;
+    top: 0;
+    right: auto;
 
-.swiper-button-next::after,
-.swiper-rtl .swiper-button-prev::after {
-  content: 'next';
-}
+    &.swiper-button-disabled::after {
+      opacity: 0.5;
+    }
 
-.swiper-button-next {
-  transform: matrix(-1, 0, 0, 1, 0, 0);
-}
+    &::after {
+      font-family: swiper-icons;
+      font-size: var(--swiper-navigation-size);
+      text-transform: none !important;
+      letter-spacing: 0;
+      font-variant: initial;
+      line-height: 1;
+      content: 'prev';
+    }
 
-.swiper-button-next::after {
-  transform: rotate(180deg);
-}
+    &.swiper-button-disabled {
+      opacity: 0;
+      cursor: auto;
+      pointer-events: none;
+    }
 
-.swiper-button-lock {
-  display: none;
+    &.swiper-button-hidden {
+      opacity: 0;
+      cursor: auto;
+      pointer-events: none;
+    }
+  }
+
+  &-button-lock {
+    display: none;
+  }
+
+  &-rtl {
+    & .swiper-button-prev {
+      right: 0;
+      top: 0;
+      left: auto;
+      &::after {
+        content: 'next';
+      }
+    }
+    & .swiper-button-next {
+      left: 0;
+      top: 0;
+      right: auto;
+      &::after {
+        content: 'prev';
+      }
+    }
+  }
+
+  &-navigation-disabled {
+    & .swiper-button-next {
+      display: none !important;
+    }
+
+    & .swiper-button-prev {
+      display: none !important;
+    }
+  }
 }
